@@ -1,7 +1,7 @@
 
 Known bugs:
 
-* None known yet
+* Don#t start looking
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
